# weather-tg-bot

./: .env.dist  .gitignore  Dockerfile  README.md  pyproject.toml
weather_tg_bot/: __main__.py  config.py  main.py  parser.py
