[project]
name = "weather-telegram-bot"
version = "0.1.0"
description = "Бот для получения прогноза погоды в Telegram"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pydantic-settings==2.9.1",
    "aiogram==3.20.0.post0",
]

[tool.ruff.lint]
select = ["ALL"]
preview = true
ignore = [
    # Ошибки связанные с кирилицей
    "RUF001", "RUF002", "RUF003",

    # Докстроки (мне лень)
    "D103", "D104", "D100", "CPY001",

    # Datetime без tz
    "DTZ005", "DTZ006",
]
